--- a/devops/08.aliyun/06.日志服务SLS/告警/01.日志服务(SLS)告警实践.md
+++ b/devops/08.aliyun/06.日志服务SLS/告警/01.日志服务(SLS)告警实践.md
@@ -17,13 +17,14 @@ WebHook：包括钉钉机器人，及自定义WebHook等
 除自身告警外，日志服务与云监控已打通，可以使用云监控日志告警功能。
 image
 
-告警设置案例（Nginx日志为例）
+# 1. 告警设置案例（Nginx日志为例）
 我们用一个最最常用的案例（Nginx日志分析）来说明当前使用场景，告警要解决的3个问题：
 
 是否有错误
 是否有性能问题
 是否有流量急跌或暴涨
-准备工作（Nginx日志接入）
+
+#  2. 准备工作（Nginx日志接入）
 日志数据采集。详细步骤请参考5分钟快速入门 或 直接在Logstore页面 数据源接入向导 中设置。
 索引设置，详细步骤请参考索引设置与可视化或最佳实践网站日志分析案例。
 对关键指标设置视图 + 告警。
@@ -35,13 +36,13 @@ Sample视图（例子）：
 
 Snip20171211_28
 
-1. 是否有错误
+# 3. 是否有错误
 错误一般有这样几类：404（请求无法找到地址）/502/500（服务端错误），我们一般只需关心500（服务端错误），将这个query保存下来，统计单位时间内错误数c。告警可以设定一个规则c > 0 则产生告警：
 
 status:500 | select count(1) as c
 这种方式比较简单，但往往过于敏感，对于一些业务压力较大的服务而言有零星几个500是正常的。为了应对这种情况，我们可以在告警条件中设置触发次数为2次：只有连续2次检查都符合条件后再发告警。
 
-2. 是否有性能问题
+# 4. 是否有性能问题
 服务器运行过程中虽然没有错误，但有可能会出现延迟（Latency）增大情况，因此我们可以针对延迟进行告警。
 
 例如我们可以通过以下方式计算某个接口（“/adduser"）所有写请求（”Post“）延时。告警规则设置为 l > 300000 (当平均值超过300ms后告警)。
@@ -60,7 +61,7 @@ Method:Post and URL:"/adduser" | select approx_percentile(Latency, 0.99) as p99
 * | select avg(Latency) as l, approx_percentile(Latency, 0.5) as p50, approx_percentile(Latency, 0.99) as p99, date_trunc('minute', time) as t group by t order by t desc limit 1440
 image
 
-3. 是否有流量急跌或暴涨？
+# 5. 是否有流量急跌或暴涨？
 服务器端自然流量一般符合概率上的分布，会有一个缓慢上涨或下降过程。流量急跌或暴涨（短时间内变化非常大）一般都是不正常的现象，需要留意。
 
 （例如下图的监控中，在2分钟时间内流量大小下跌30%以上，在2分钟内后又迅速恢复）
@@ -74,7 +75,7 @@ image
 上一周该时间段的窗口：环比上周
 我们这里以第一种情况来作为case讨论，计算流量infow数据的变动率（也可以换成QPS等流量）。
 
-3.1 首先定义一个计算窗口
+# 6. 首先定义一个计算窗口
 例如我们定一个1分钟的窗口，统计该分钟内的流量大小，以下是一个5分钟区间统计：
 
 * | select sum(inflow)/(max(__time__)-min(__time__)) as inflow , __time__-__time__%60  as window_time from log group by window_time order by window_time limit 15
@@ -82,13 +83,13 @@ image
 
 image
 
-3.2 计算窗口内的差异值（最大值变化率）
+# 7. 计算窗口内的差异值（最大值变化率）
 这里我们会用到子查询，我们写一个查询，从上述结果中计算最大值 或 最小值 与平均值的变化率（这里的max_ratio)，例如如下计算结果max_ratio 为 1.02。我们可以定义一个告警规则，如果max_ratio > 1.5 （变化率超过50%）就告警。
 
  * | select max(inflow)/avg(inflow) as max_ratio from (select sum(inflow)/(max(__time__)-min(__time__)) as inflow , __time__-__time__%60  as window_time from log group by window_time order by window_time limit 15) 
 image
 
-3.3 计算窗口内的差异值（最近值变化率）
+# 8. 计算窗口内的差异值（最近值变化率）
 在一些场景中我们更关注最新的数值是否有波动（是否已经恢复），那可以通过max_by方法获取最大windows_time中的流量来进行判断，这里计算的最近值为lastest_ratio=0.97。
 
 注意：
@@ -98,7 +99,7 @@ image
  * | select max_by(inflow, window_time)/1.0/avg(inflow) as lastest_ratio from (select sum(inflow)/(max(__time__)-min(__time__)) as inflow , __time__-__time__%60  as window_time from log group by window_time order by window_time limit 15) 
 image
 
-3.4 计算窗口内的差异值（定义波动率，上一个值与下一个变化率）
+# 9. 计算窗口内的差异值（定义波动率，上一个值与下一个变化率）
 波动率另外一种计算方法是数学上一阶导数，既当前窗值 与 上个窗口值的变化值。
 
 image.png
