--- a/devops/02.jenkins/15.pipeline/2.不重启jenkins停止僵尸进程.md
+++ b/devops/02.jenkins/15.pipeline/2.不重启jenkins停止僵尸进程.md
@@ -29,10 +29,11 @@ Jenkins.instance.getItemByFullName("talent") //JobName
 Go to "Manage Jenkins" > "Script Console" to run a script on your server to interrupt the hanging thread.
 
 You can get all the live threads with Thread.getAllStackTraces() and interrupt the one that's hanging.
-
+```groovy
 Thread.getAllStackTraces().keySet().each() {
   t -> if (t.getName()=="YOUR THREAD NAME" ) {   t.interrupt();  }
 }
+```
 UPDATE:
 
 The above solution using threads may not work on more recent Jenkins versions. To interrupt frozen pipelines refer to this solution (by alexandru-bantiuc) instead and run:
