--- a/manage/02.信息系统项目管理师/01.信息系统与信息化基础知识/01.信息系统的生命周期.md
+++ b/manage/02.信息系统项目管理师/01.信息系统与信息化基础知识/01.信息系统的生命周期.md
@@ -6,4 +6,6 @@
     1. 解析：以下关于信息系统生命周期的叙述中，不正确的是（）。b、立项阶段结束的里程碑是集成企业提交的立项 - 试题库 - 信管网 http://www.cnitpm.com/pm1/44908.html
     2. 解析：信息系统的生命周期可以简化为立项、开发、运维及消亡4个阶段。（）属于开发阶段的工作。 - 试题库 - 信管网 http://www.cnitpm.com/pm1/64907.html
     3. 解析：信息系统的生命周期可以分为立项、开发、运维及消亡四个阶段。以下对各阶段的叙述中，不正确的是（ - 试题库 - 信管网 https://www.cnitpm.com/pm1/45402.html
-    
+    4. 某快消品连锁企业委托科技公司a开发部署电子商务平台，a公司根据系统设计任务书所确定的范围，确定系统的基本目标和逻辑功能要求，提出新系统的逻辑模型，这属于信息系统生命周期中（）阶段的工作。 - 信管网 https://www.cnitpm.com/st/3869421731.html
+    5. 解析：（）的任务是：根据系统说明书规定的功能要求，考虑实际条件，具体设计实现逻辑模型的技术方案。 - 试题库 - 信管网 https://www.cnitpm.com/pm1/63897.html
+    6. 解析：某公司准备将运行在本地局域网上的CRM系统迁移到集团云平台上并做适当的功能扩充，从信息系统生命周 - 试题库 - 信管网 https://www.cnitpm.com/pm1/49775.html
