--- a/manage/02.信息系统项目管理师/01.信息系统与信息化基础知识/03.信息化及信息化的5个层次.md
+++ b/manage/02.信息系统项目管理师/01.信息系统与信息化基础知识/03.信息化及信息化的5个层次.md
@@ -5,3 +5,4 @@
     1. 解析：信息化建设是我国现代化建设的重要组成部分，信息化的手段是 https://www.cnitpm.com/pm1/49502.html
     2. 关于“信息化”的描述，不正确的是 http://www.cnitpm.com/st/3885019766.html
     3. 目前正在兴起的智慧城市、互联网金融等（）的体现和重要发展发现 http://www.cnitpm.com/pm1/39649.html
+    4. 信息化可分成产品信息化、企业信息化、产业信息化、国民经济信息化、社会生活信息化等不同层次。目前正在兴起的智慧城市、互联网金融等（）的体现和重要发展发现 http://www.cnitpm.com/pm1/39427.html
