--- a/program/02.python/04.深度学习/12.文本分析/18.情感分析/情感分析.md
+++ b/program/02.python/04.深度学习/12.文本分析/18.情感分析/情感分析.md
@@ -1,5 +1,7 @@
 
 
+1. https://github.com/isnowfy/snownlp
+2. 英文分词 https://github.com/sloria/TextBlob
 
 
 1. https://github.com/reymont/senti_analysis (fork)
