--- a/manage/02.信息系统项目管理师/06.软件工程.md
+++ b/manage/02.信息系统项目管理师/06.软件工程.md
@@ -1,15 +1,15 @@
-1. 软件过程管理集成了过程管理和项目管理，
+1. 软件过程管理集成了过程管理和项目管理，软件过程管理的六个方面
     1. 启动和范围定义
     2. 软件项目计划
     3. 软件项目实施
-    4. 评审和评价：进行确认软件是否得到满足的验证活动
+    4. 评审和评价：`进行确认软件是否得到满足的验证活动`
     5. 关闭
     6. 软件工程度量：进行在软件工程组织中有效的开发和实现度量的程序
 2. 软件需求规格说明
     1. 软件需求规格说明能为成本计价和编制计划进度提供基础。
         1. 它提供的对被开发软件产品的描述，是计算机软件产品成本核算的基础，并且可以为各方的要价和付费提供依据;
         2. 它对软件的清晰描述，有助于估计所必需的资源，并用做编制进度的依据。
-        3. 但它不一定包括软件开发方法和验收过程等重要外部约束条件。
+        3. 但它`不一定包括软件开发方法和验收过程等重要外部约束条件`。
     2. 《计算机软件需求说明编制指南》GB/T9385中定义了需求的具体内容，包括： 
         1. 功能需求：指描述软件产品的输入怎样变换成输出即软件必须完成的基本动作。对于每一类功能或者有时对于每一个功能需要具体描述其输入、加工和输出的需求。 
             1. 定期生成销售分析报表
@@ -31,16 +31,193 @@
         5. 外部接口需求：包括用户接口、硬件接口、软件接口、通信接口。 
         6. 其他需求：根据软件和用户组织的特性等某些需求放在数据库、用户要求的常规的和特殊的操作、场合适应性需求中描述。 
 3. 过程能力成熟度模型Capability Maturity Model CMM
-    1. CMM的第二级为可重复级，它包括了6个关键域Key Process Areas, KPA
+    1. 软件能力成熟模型CMM（Capability Maturity Model for Software）的五个成熟级别
+        1. 第一级：初始级(Initial)；无序，随意。初始级的软件过程是无序的，项目的执行是随意甚至是混乱的。工作方式处于救火状态，不断的应对突如其来的危机；
+        2. 第二级：可重复级(Repeatable)；基本的项目管理管理。建立了基本的项目管理过程来跟踪费用，进度和功能特性，制定了必要的过程纪律，能重复早先类似的应用项目取得的成功。
+        3. 第三级：已定义级(Defined)；`标准化，文档化`。已经将软件管理核工程两方面的过程文档化，标准化，并综合成组织的标准软件过程，所有项目均使用该标准开发维护软件。
+        4. 第四级：已管理级(Managed)；可预测。收集对软件过程和产品质量的详细度量，对软禁啊过程和产品都有定量的理解和控制。
+        5. 第五级：优化级(Optimizing)。优化。过程的量化反馈和先进的新思想，新技术促使过程不断改进。
+    2. CMM的第二级为可重复级，它包括了6个关键域Key Process Areas, KPA
         1. 需求管理
-            1. 需求管理的目标是为软件需求建立一个基线，提供给软件工程和管理使用；软件计划、产品和活动与软件需求保存一致
+            1. `需求管理的主要目标是为软件需求建立一个基线`，提供给软件工程和管理使用；软件计划、产品和活动与软件需求保存一致
         2. 软件项目计划
         3. 软件项目跟踪和监督
         4. 软件分包合同管理
         5. 软件质量保证
         6. 软件配置管理
+    3. 使用连续式表示法便你能够达成“`能力等级`”。使用阶段式表示法使你能够达成“`成熟度级别`”。
 4. 面向对象
     1. 软件复用是指将已有的软件及其有效成分用于构造新的软件或系统。`组件技术是软件复用实现的关键`。
     2. 模式是一条由三部分组成的规则，它表示了一个特定的环境，一个问题和一个解决方案之间的关系。
     3. 接口是对操作规范的说明。接口只说明了操作应该做什么（WHAT），但`没有定义操作如何做（HOW）`。接口在面向对象分析和设计过程中起到了至关重要的桥梁作用，系统分析员通常先把有待实现的功能封装并定义成接口，而后期程序员依据此接口进行编码实现。
     4. 继承可分为单继承与多继承。其中JAVA是单继承的语言.
+    5. `对象可以按其属性来归类`，借助类的层次结构，子类可以通过继承机制获得其父类的特性
+    6. 面向对象的基本概念包括对象、类、抽象、封装、继承、多态、接口、消息、组件、复用和模式等。
+        1. 对象：由数据及其操作所构成的封装体，是系统中用来描述客观事物的一个模块，是构成系统的基本单位。用计算机语言来描述，对象是由一组属性和对这组属性进行的操作构成的。对象包含3个基本要素，分别是`对象标识、对象状态和对象行为`。例如，对于姓名（标识）为joe的教师而言，其包含性别、年龄、职位等个人状态信息，同时还具有授课等行为特征，joe就是封装后的一个典型对象。
+        2. 类：现实世界中实体的形式化描述，类将该实体的属性（数据）和操作（函数）封装在一起。类和对象的关系可理解为，对象是类的实例，类是对象的模板。如果将对象比作房子，那么类就是房子的设计图纸。
+        3. 抽象：通过特定的实例抽取共同特征以后形成概念的过程。抽象是一种单一化的描述，强调给出与应用相关的特性，抛弃不相关的特性。对象是现实世界中某个实体的抽象，类是一组对象的抽象。
+        4. 封装：`将相关的概念组成一个单元模块，并通过一个名称来引用它`。面向对象封装是将数据和基于数据的操作封装成一个整体对象，对数据的访问或修改只能通过对象对外提供的接口进行。
+        5. 继承：表示类之间的层次关系（父类与子类），这种关系使得某类对象可以继承另外一类对象的特征，继承又可分为单继承和多继承。
+        6. 多态：使得在多个类中可以定义同一个操作或属性名称，并在每个类中可以有不同的体现。多态使得某个属性或操作在不同的时期可以表示不同类的对象特性。
+        7. 接口：描述对操作规范的说明，其只说明操作应该做什么，并没有定义操作如何做。可以将接口理解成为类的一个特例，它规定了实现此接口的类的操作方法，把真正的实现细节交由实现该接口的类去完成。
+        8. 消息：体现对象间的交互，通过它向目标对象发送操作请求。
+        9. 组件：表示软件系统可替换的、物理的组成部分，封装了模块功能的实现。组件应当是内聚的，并具有相对稳定的公开接口。
+        10. 复用：指将已有的软件及其有效成分用于构造新的软件或系统。组件技术是软件复用实现的关键。
+        11. 模式：描述了一个不断重复发生的问题，以及该问题的解决方案。其包括特定环境、问题和解决方案3个组成部分。应用设计模式可以更加简单和方便地去复用成功的软件设计和架构，从而帮助设计者更快更好地完成系统设计。
+5. UML
+    1. 在统一建模语言（UML）中，`用例图`用于描述系统与外部系统及用户之间的交互。
+6. 企业应用技术
+    1. EAI包括的内容很复杂，涉及到结构、硬件、软件以及流程等企业系统的各个层面，具体可分为如下的集成界面，`界平数应过`
+        1. 界面集成
+        2. 平台集成
+        3. 数据集成
+        4. 应用集成
+        5. 过程集成
+    2. 目前市场主流的集成模式有3种，分别是面向信息的集成技术、面向过程的集成技术和面向服务的集成技术。
+        1. 面向信息的集成技术采用的主要数据处理技术有数据复制、数据聚合和接口集成等，其中接口集成仍然是一种主流技术。它通过一种集成代理的方式实现集成，即为应用系统创建适配器作为自己的代理。适配器通过其开放或私有接口将信息从应用系统中提取出来，并通过开放接口与外界系统实现信息交互。而假如适配器的结构支持一定的标准，则将极大地简化集成的复杂度，并有助于标准化，这也是面向接口集成方法的主要优势来源。标准化的适配器技术可以使企业从第三方供应商获取适配器，从而使集成技术简单化。
+        2. 面向过程的集成技术其实是一种过程流集成的思想，它不需要处理用户界面开发、数据库逻辑及事务逻辑等，而只是处理系统之间的过程逻辑，并和核心业务逻辑相分离。在结构上，面向过程的集成技术在面向接口的集成方案之上定义了另外的过程逻辑层。而在该结构的底层，应用服务器及消息中间件提供了支持数据传输和跨过程协调的基础服务。对于提供集成代理、消息中间件，以及应用服务器的厂商来说，提供用于业务过程集成是对其产品的重要拓展，也是目前应用集成市场的重要需求。
+        3. 基于SOA（面向服务结构）和Web服务技术的应用集成是业务集成技术上的一次重要的变化，被认为是新一代的应用集成技术。集成的对象是一个个Web服务或者是封装成Web服务的业务处理。Web服务技术由于是基于最广为接受且开放的技术标准（如HTTP和SMTP等），支持服务接口描述和服务处理的分离、服务描述的集中化存储和发布、服务的自动查找和动态绑定，以及服务的组合，所以成为新一代面向服务的应用系统构建和集成的基础设施。
+7. 质量特性及子特性：功能性、可靠性、易用性、效率、维护性、可移植性
+    1. 功能性：当软件在指定条件下使用时，软件产品提供满足明确和隐含要求的功能的能力 
+        1. `适合性`：软件产品为指定的任务和用户目标提供一组合适的功能的能力 
+        2. `准确性`：软件产品提供具有所需精度的正确或相符的结果或效果的能力 
+        3. `互操作性`：软件产品与一个或更多的规定系统进行交互的能力 
+        4. `安全保密性`：软件产品保护信息和数据的能力 
+    2. 可靠性：在指定条件使用时，软件产品维护规定的性能级别的能力 
+        1. 成熟性：软件产品为避免由软件中故障而导致失效的能力 
+        2. 容错性：`在软件出现故障或者违反其指定接口的情况下，软件产品维持规定的性能级别的能力 `
+        3. 易恢复性：在失效发生的情况下，软件产品重建规定的性能级别并恢复受直接影响的数据的能力 
+    3. 易用性：在指定条件下使用时，软件产品被理解、学习、使用和吸引用户的能力 
+        1. 易理解性：使用用户能理解软件是否合适及如何能将软件用于特定的任务的能力 
+        2. 易学性：使用用户能学习其应用的能力 
+        3. 易操作性：使用户能操作和控制它的能力 
+        4. 吸引性：软件产品吸引用户的能力 
+    4. 效率：在规定条件下，相对于所用资源的数量，软件产品可提供适当性能的能力 
+        1. 时间特性：软件执行其功能时，提供适当的响应和处理时间以及吞吐率的能力 
+        2. 资源利用性：软件执行其功能时，使用合适数量和类别的资源的能力 
+    5. 维护性：软件产品可被修改的能力。包括纠正、改进或对环境、需求和功能规格说明变化的适应 
+        1. 易分析性：诊断软件中的缺陷或失效原因或识别待修改部分的能力 
+        2. 易改变性：使指定的修改可以被实现的能力 
+        3. `稳定性`：避免由于软件修改而造成意外结果的能力 
+        5. 易测试性：使已修改软件能被确认的能力 
+    6. 可移植性：软件产品从一种环境迁移到另外一种环境的能力 
+        1. 适应性：无需采用额外的活动或手段就可适应不同指定环境的能力 
+        2. 易安装性：软件产品在指定环境中被安装的能力 
+        3. 共存性：在公共环境中同与其分享公共资源的其他独立软件共存的能力 
+        4. 易替换性：在同样的环境下，替代另一个相同用途的指定软件产品的能力
+8. 软件维护
+    1. 将软件维护定义为需要提供软件支持的全部活动。这些活动包括在交付前完成的活动，以及交付后完成的活动。交付前要完成的活动包括交付后的运行计划和维护计划等。交付后的活动包括软件修改、培训、帮助资料等。 
+    2. 软件系统的维护从性质上分为纠错型维护、适应型维护、预防型和完善型维护。
+        1. 纠错性维护。纠正在开发阶段产生而在测试和验收过程没有发现的错误。更正性维护: 更正交付后发现的错误。其主要包括：
+            1. 设计错误；
+            2. 程序错误；
+            3. 数据错误；
+            4. 文档错误；
+        2. 适应性维护。`为适应软件运行环境改变而做的修改`。使软件产品能够在变化后或变化中的环境中继续使用；环境改变的主要内容包括：
+            1. 影响系统的规划或规律的变化；
+            2. 硬件配置的变化，如机型、终端和外部设备的改变等；
+            3. 数据格式或文件结构的改变；如某软件系统进行升级，将某字段的长度由原先的32位增加到64位
+            4. 软件支持环境的改变，如操作系统、编译器或实用程序的变化等。
+        3. 完善性维护。为扩充功能或改善性能而进行的修改。修改方式有插入、删除、扩充和增强等。改进交付后产品的性能和可维护性。主要内容包括：
+            1. 为扩充和增强功能而做的修改，如扩充解题范围和算法优化等；
+            2. 为改善性能而做的修改，如提高运行速度、节省存储空间等；
+            3. 为便于维护而做的修改，如为了改进易读性而增加一些注释等。
+        4. 预防性维护。为了明天的需要，把今天的方法应用到昨天的系统中，目的是为了使旧系统焕发新活力，这样的维护是预防型维护，这种维护所占的比例很小，因为它耗资巨大。在软件产品中的潜在错误成为实际错误前，检测并更正它们。
+9. 软件质量保证及质量评价
+    1. 软件质量指的是软件特性的总和，是软件满足用户需求的能力，即遵从用户需求，达到用户满意。软件质量包括“内部质量”“外部质量”和“使用质量”三部分。软件需求定义了软件质量特性，及确认这些特性的方法和原则。 
+    2. 软件质量管理过程由许多活动组成，一些活动可以直接发现缺陷，另一些活动则检查活动的价值。其中包括质量保证过程、验证过程、确认过程、评审过程、审计过程等。
+        1. 软件质量保证：通过制订计划、实施和完成等活动保证项目生命周期中的软件产品和过程符合其规定的要求。
+            1. 软件质量保证是一系列活动，这些活动能够提供整个软件产品的适用性的证明。要实现软件质量保证，就需要使用为确保一致性和延长的软件周期而建立的质量控制规则。而质量保证、质量控制、审核功能以及软件测试之间的关系经常容易使人迷惑。 
+            2. 为了生产出满足客户需求的产品，就必须遵循一定的过程。质量保证是一系列的支持措施，有了这些措施，这些过程的建立和改进就有了保障。在质量保证的过程中，产品质量将和可用的标准相比较，同时也要和不一致产生时的行为相比较。而`审核则是一个检查/评估的活动，用以验证与计划、原则以及过程的一致性`。
+            3. 软件质量保证的主要职责是：`检查开发和管理活动是否与已定的过程策略、标准和流程一致，检查工作产品是否遵循模板规定的内容和格式`。 
+        2. 验证与确认：确定某一活动的产品是否符合活动的需求，昀终的软件产品是否达到其意图并满足用户需求。 
+        验证过程试图确保活动的输出产品已经被正确构造，即活动的输出产品满足活动的规范说明；确认过程则试图确保构造了正确的产品，即产品满足其特定的目的。 
+        3. 评审与审计：包括管理评审、技术评审、检查、走查、审计等。
+            1. `管理评审的目的是监控进展，决定计划和进度的状态，或评价用于达到目标所用管理方法的有效性`
+            2. `技术评审`的目的是`评价软件产品，以确定其对使用意图的适合性`。目标是识别规范说明与标准的差异，并向管理提供证据，以表明产品是否满足规范说明并遵从标准，而且可以控制变更。检查的目的是检测和识别软件产品异常。
+            3. 审计：`为评估是否符合软件需求、规格说明、基线、标准、过程、指令、代码以及合同和特殊要求丽进行的一种独立的检查`：通过调查研究确定已制定的过程、指令、规格说明、代码和标准或其他的合同及特殊要求是否恰当和被遵守，以及其实现是否有效而进行的活动。`软件审计的目的是提供软件产品和过程对于可应用的规则、标准、指南、计划和流程的遵从性的独立评价`。审计是正式组织的活动，识别违例情况，并要生成审计报告，采取更正性行动。
+            4. 走查是审评过程中采用的一种方法。走查时，软件设计者或程序开发人员指导一名或多名其他参加评审的成员，通读已书写的设计文档或编码，其他成员负责提出问题，并对有关技术、风格、可能的错误、是否有违背评审标准的地方进行评论。 
+10. 软件测试
+    1. 在软件开发过程中，造成错误的原因有很多，比如程序员的大意造成的编码错误，语法错误等。测试是为了评价和改进产品质量、识别产品的缺陷和问题而进行的活动。软件测试不是导致软件错误的原因，软件测试是针对一个程序的行为，在有限测试用例集合上，动态验证是否达到预期的行为，需要选取适当的测试用例。测试不仅是检查预防措施是否有效的主要手段，而且是识别由于某种原因预防措施无效而产生的错误的主要手段。需要大家注意的是，在广泛的测试活动成功完成后，软件可能仍有错误，交付后出现的软件失效的补救措施是通过软件维护来达成的。 
+    2. 软件测试是一个系列过程活动，包括软件测试需求分析，测试计划设计，测试用例设计，执行测试。因此，`软件测试贯穿于软件项目的整个生命过程`。
+    3. 分类
+        1. `从是否关心软件内部结构和具体实现的角度`划分白盒测试、黑盒测试、灰盒测试。
+            1. 静态结构分析法、代码检查法、代码覆盖率分析法均属于白盒测试方法
+            2. 等价类划分法属于黑盒测试
+        2. `从是否执行程序的角度`划分静态测试和动态测试 
+        3. `从软件开发的过程按阶段`划分有单元测试、集成测试、确认测试、系统测试、验收测试 
+    4. `回归测试`是指修改了旧代码后，重新进行测试以确认修改没有引入新的错误或导致其他代码产生错误。 
+    5. `集成测试`，也叫组装测试或联合测试。在单元测试的基础上，将所有模块按照设计要求（如根据结构图）组装成为子系统或系统，进行集成测试。 
+    6. `冒烟测试`的对象是每一个新编译的需要正式测试的软件版本，目的是确认软件基本功能正常，可以进行后续的正式测试工作。冒烟测试的执行者是版本编译人员。 
+    7. `测试是为了评价和改进产品质量、识别产品的缺陷和问题而进行的活动`。软件测试是针对一个程序的行为，在有限测试用例集合上，动态验证是否达到预期的行为。
+    8. 单元测试。单元测试也称为模块测试，测试的对象是可独立编译或汇编的程序模块、软件构件或00软件中的类（统称为模块），其目的是检查每个模块能否正确地实现设计说明中的功能、性能、接口和其他设计约束等条件，发现模块内可能存在的各种差错。单元测试的技术依据是软件详细设计说明书，着重从模块接口、局部数据结构、重要的执行通路、出错处理通路和边界条件等方面对模块进行测试。
+    9. 集成测试。集成测试的目的是检查模块之间，以及模块和已集成的软件之间的接口关系，并验证已集成的软件是否符合设计要求。集成测试的技术依据是软件概要设计文档。除应满足一般的测试准入条件外，在进行集成测试前还应确认待测试的模块均己通过单元测试。
+    10. 确认测试。`确认测试主要用于验证软件的功能、性能和其他特性是否与用户需求一致`。根据用户的参与程度，通常包括以下类型。
+        1. 内部确认测试。内部确认测试主要由软件开发组织内部按照SRS进行测试。
+        2. Alpha测试和Beta测试。对于通用产品型的软件开发而言，Alpha测试是指由用户在开发环境下进行测试，通过Alpha测试以后的产品通常称为Alpha版；Beta测试是指由用户在实际使用环境下进行洌试，通过Beta测试的产品通常称为Beta版。一般在通过Beta测试后，才能把产品发布或交付给用户。
+        3. 验收测试。验收测试是指针对SRS，在交付前以用户为主进行的测试。其测试对象为完整的、集成的计算机系统。验收测试的目的是，在真实的用户工作环境下，检验软件系统是否满足开发技术合同或SRS。验收测试的结论是用户确定是否接收该软件的主要依据。除应满足一般测试的准入条件外，在进行验收测试之前，应确认被测软件系统已通过系统测试。
+    11. 系统测试。系统测试的对象是完整的、集成的计算机系统，系统测试的目的是在真实系统工作环境下，验证完整的软件配置项能否和系统正确连接，并满足系统／子系统设计文档和软件开发合同规定的要求。系统测试的技术依据是用户需求或开发合同，除应满足一般测试的准入条件外，在进行系统测试前，还应确认被测系统的所有配置项已通过测试，对需要固化运行的软件还应提供固件。一般来说，系统测试的主要内容包括功能测试、健壮性测试、性能测试、用户界面测试、安全性测试、安装与反安装测试等，其中，最重要的工作是进行功能测试与性能测试。功能测试主要采用黑盒测试方法；性能测试主要验证软件系统在承担一定负载的情况下所表现出来的特性是否符合客户的需要，主要指标有响应时间、吞吐量、并发用户数和资源利用率等。
+    12. 配置项测试。配置项测试的对象是软件配置项，配置项测试的目的是检验软件配置项与SRS的一致性。配置项测试的技术依据是SRS（含接口需求规格说明）。除应满足一般测试的准入条件外，在进行配置项测试之前，还应确认被测软件配置项已通过单元测试和集成测试。
+    13. 回归测试。回归测试的目的是测试软件变更之后．变更部分的正确性和对变更需求的符合性，以及软件原有的、正确的功能、性能和其他规定的要求的不损害性。回归测试的对象主要包括以下四个方面。
+        1. 未通过软件单元测试的软件，在变更之后，应对其进行单元测试。
+        2. 未通过配置项测试的软件，在变更之后，首先应对变更的软件单元进行测试，然后再进行相关的集成测试和配置项测试。
+        3. 未通过系统测试的软件，在变更之后，首先应对变更的软件单元进行测试，然后再进行相关的集成测试、配置项测试和系统测试。
+        4. 因其他原因进行变更之后的软件单元，也首先应对变更的软件单元进行测试，然后再进行相关的软件测试。
+    14. `软件单元测试由承建单位组织，一般由软件开发组实施测试`。测试工作都不应该由监理方或者业主方组织
+    15. 测试覆盖标准从发现错误的强弱能力依次是路径覆盖、条件组合覆盖、判定覆盖、条件覆盖、语句覆盖
+11. 软件设计
+    1. 软件设计是定义一个系统或组件的`架构、组件、接口`和其他特征的过程，并得到这个过程的结果。 
+    2. 软件设计包括软件架构设计和软件详细设计。`架构设计属于高层设计，主要描述软件的结构和组织，标识各种不同的组件`。
+12. 结构化分析方法
+    1. 结构化分析方法给出一组帮助系统分析人员产生功能规约的原理与技术。它一般利用图形表达用户需求，使用的手段主要有`数据流图、数据字典、结构化语言、判定表以及判定树`等。
+13. 软件设计、测试与维护
+    1. 软件设计
+        1. 根据软件需求，产生一个软件内部结构的描述，并将其作为软件构造的基础。通过软件设计，描述出软件架构及相关组件之间的接口；然后，进一步详细地描述组件，以便能构造这些组件。 
+        2. 通过软件设计得到要实现的各种不同模型，并确定昀终方案。其可以划分为软件架构设计（也叫做高层设计）和软件详细设计两个阶段。
+    2. 软件测试：
+        1. `测试是为了评价和改进产品质量、识别产品的缺陷和问题而进行的活动`。软件测试是针对一个程序的行为，在有限测试用例集合上，动态验证是否达到预期的行为。
+        2. `测试不再只是一种仅在编码阶段完成后才开始的活动`。现在的软件测试被认为是一种应该包括在整个开发和维护过程中的活动，它本身是实际产品构造的一个重要部分。 
+        3. 软件测试伴随开发和维护过程，通常可以在概念上划分为单元测试、集成测试和系统测试三个阶段。
+14. 需求分析
+    1. `所有软件需求都必须可以被验证`。
+    2. 软件需求是针对待解决问题的特性的描述。所定义的需求必须可以被验证。在资源有限时，可以通过优先级对需求进行权衡。
+    3. 需求分析涉及分析需求的过程，其目的如下。 
+        1. 检测和解决需求之间的`冲突`。 
+        2. 发现软件的边界，以及软件与其环境如何`交互`。 
+        3. 详细描述系统需求，以`导出软件需求`。 
+    4. `需求分析阶段要确定对系统的综合要求、功能要求和性能要求等。而概要设计、详细设计均是对系统的具体设计方案的分析。程序设计即为编码过程`。 
+    5. 软件需求包括 3 个不同的层次：业务需求、用户需求和功能需求。 
+        1. 业务需求（ Business requirement ） `表示组织或客户高层次的目标`。业务需求通常来自项目投资人、购买产品的客户、实际用户的管理者、市场营销部门或产品策划部门。业务需求描述了组织为什么要开发一个系统，即组织希望达到的目标。使用前景和范围（ vision and scope ）文档来记录业务需求，这份文档有时也被称作项目轮廓图或市场需求（ project charter 或 market requirement ）文档。`业务需求是指反映企业或客户对系统高层次的目标要求`，通常来自项目投资人、购买产品的客户、客户单位的管理人员、市场营销部门或产品策划部门等。通过业务需求可以确定项目视图和范围，项目视图和范围文档把业务需求集中在一个简单、紧凑的文档中，该文档为以后的开发工作奠定了基础。
+        2. 用户需求（ user requirement ） 描述的是用户的目标，或用户要求系统必须能完成的任务。用例、场景描述和事件――响应表都是表达用户需求的有效途径。也就是说用户需求描述了用户能使用系统来做些什么。 
+        3. 功能需求（ functional requirement ） 规定开发人员必须在产品中实现的软件功能，用户利用这些功能来完成任务，满足业务需求。功能需求有时也被称作行为需求（ behavioral requirement ），因为习惯上总是用“应该”对其进行描述：“系统应该发送电子邮件来通知用户已接受其预定”。功能需求描述是开发人员需要实现什么。
+    6. 可以把需求工程的活动划分为以下5个独立的阶段： 
+        1. 需求获取：通过与用户的交流，对现有系统的观察及对任务进行分析，从而开发、捕获和修订用户的需求； 
+        2. 需求建模：为最终用户所看到的系统建立一个概念模型，作为对需求的抽象描述，并儘可能多的捕获现实世界的语义； 
+        3. 形成需求规格：生成需求模型构件的精确的形式化的描述，作为用户和开发者之间的一个协约； 
+        4. 需求验证：以需求规格说明为输入，通过符号执行、模拟或`快速原型`等途径，分析需求规格的正确性和可行性； 
+        5. 需求管理：支持系统的需求演进，如需求变化和可跟踪性问题。
+    7. 完整的需求分析过程包括：`获取用户需求、分析用户需求、编写需求说明书和需求评审`四个过程。
+    8. 需求分析可分为`需求提出、需求描述及需求评审`三个阶段。 
+        1. 需求提出主要集中于描述系统目的。需求提出和分析仅仅集中在使用者对系统的观点上。用户、开发人员和用户确定一个问题领域，并定义一个描述该问题的系统。这样的定义称作系统规格说明，并且它在用户和开发人员之间充当合同。 
+        2. 在问题分析阶段分析人员的主要任务是：对用户的需求进行鉴别、综合和建模，清除用户需求的模糊性、歧义性和不一致性，分析系统的数据要求，为原始问题及目标软件建立逻辑模型。分析人员要将对原始问题的理解与软件开发经验结合起来，以便发现哪些要求是由于用户的片面性或短期行为所导致的不合理要求，哪些是用户尚未提出但具有真正价值的潜在需求。 
+        3. 在需求评审阶段，分析人员要在用户和软件设计人员的配合下对自己生成的需求规格说明和初步的用户手册进行复核，以确保软件需求的完整、准确、清晰、具体，并使用户和软件设计人员对需求规格说明和初步的用户手册的理解达成一致。一旦发现遗漏或模糊点，必须尽快更正，再行检查。
+15. 软件三层架构
+    1. 中间件（Middleware）是位于硬件、操作系统等平台和应用之间的通用服务。借由中间件，解决了分布系统的异构问题。
+16. 配置管理
+    1. 配置控制委员会(Configuration Control Board，CCB)，负责对配置变更做出评估、审批以及监督已批准变更的实施。
+    2. CCB建立在项目级，其成员可以包括项目经理、用户代表、产品经理、开发工程师、测试工程师、质量控制人员、配置管理员等。`CCB不必是常设机构，完全可以根据工作的需要组成`，例如按变更内容和变更请求的不同，组成不同的CCB。小的项目CCB可以只有一个人，甚至只是兼职人员。
+17. 设计模式
+    1. 设计模式是前人经验的总结，它使人们可以方便地复用成功的软件设计。当人们在特定的环境下遇到特定类型的问题，采用他人已使用过的一些成功的解决方案，一方面可以降低分析、设计和实现的难度，另一方面可以使系统具有更好的可复用性和灵活性。设计模式包含模式名称、问题、目的、解决方案、效果、实例代码和相关设计模式等基本要素。
+    2. 根据处理范围不同，设计模式可分为类模式和对象模式。类模式处理类和子类之间的关系，这些关系通过继承建立，在编译时刻就被确定下来，属于静态关系；`对象模式处理对象之间的关系，这堂关系在运行时刻变化，更具动态性`。
+    3. 根据目的和用途不同，设计模式可分为创建型( Creational)模式、结构型(Structural)模式和行为型( Behavioral)模式三种。
+        1. 创建型模式主要用于创建对象，包括工厂方法模式、抽象工厂模式、原型模式、单例模式和建造者模式等；
+        2. 结构型模式主要用于处理类或对象的组合，包括适配器模式、桥接模式、组合模式、装饰模式、外观模式、享元模式和代理模式等；
+        3. 行为型模式主要用于描述类或对象的交互以及职责的分配，包括职责链模式、命令模式、解释器模式、迭代器模式、中介者模式、备忘录模式、观察者模式、状态模式、策略模式、模板方法模式、访问者模式等。
+18. 信息系统生命周期
+    1. 系统规划阶段。系统规划阶段的任务是对组织的环境、目标及现行系统的状况进行初步调查，根据组织目标和发展战略，确定信息系统的发展战略，对建设新系统的需求做出分析和预测，同时考虑建设新系统所受的各种约束，研究建设新系统的必要性和可能性。根据需要与可能，给出拟建系统的备选方案。对这些方案进行可行性研究，写出可行性研究报告。可行性研究报告审议通过后，将新系统建设方案及实施计划编写成系统设计任务书。
+    2. 系统分析阶段。系统分析阶段的任务是根据系统设计任务书所确定的范围，对现行系统进行详细调查，描述现行系统的业务流程，指出现行系统的局限性和不足之处，确定新系统的基本目标和逻辑功能要求，即提出新系统的逻辑模型。系统分析阶段又称为逻辑设计阶段。这个阶段是整个系统建设的关键阶段，也是信息系统建设与一般工程项目的重要区别所在。系统分析阶段的工作成果体现在系统说明书中，这是系统建设的必备文件。它既是给用户看的，也是下一个阶段的工作依据。因此，系统说明书既要通俗，又要准确。用户通过系统说明书可以了解未来系统的功能，判断是不是所要求的系统。系统说明书一旦讨论通过，就是系统设计的依据，也是将来验收系统的依据。
+    3. 系统设计阶段。简单地说，系统分析阶段的任务是回答系统“做什么”的问题，而系统设计阶段要回答的问题是“怎么做”。`该阶段的任务是根据系统说明书中规定的功能要求，考虑实际条件，具体设计实现逻辑模型的技术方案，也就是设计新系统的物理模型`。这个阶段又称为物理设计阶段，可分为总体设计（概要设计）和详细设计两个子阶段。这个阶段的技术文档是系统设计说明书。
+    4. 系统实施阶段。系统实施阶段是将设计的系统付诸实施的阶段。这一阶段的任务包括计算机等设备的购置、安装和调试、程序的编写和调试、人员培训、数据文件转换、系统调试与转换等。这个阶段的特点是几个互相联系、互相制约的任务同时展开，必须精心安排、合理组织。系统实施是按实施计划分阶段完成的，每个阶段应写出实施进展报告。系统测试之后写出系统测试分析报告。
+    5. 系统运行和维护阶段。系统投入运行后，需要经常进行维护和评价，记录系统运行的情况，根据一定的规则对系统进行必要的修改，评价系统的工作质量和经济效益。
+19. 软件架构
+    1. 软件架构是“一个描述软件系统的子系统和组件，以及它们之间相互关系的学科”。架构试图定义软件的内部结构。通过视图可以从不同角度描述软件结构，主要包括`逻辑视图（满足功能需求）、过程视图（并发问题）、组件视图（实现问题）、部署视图（分布问题）`。 
