--- a/manage/02.信息系统项目管理师/07.计算机网络知识.md
+++ b/manage/02.信息系统项目管理师/07.计算机网络知识.md
@@ -12,17 +12,21 @@
         4. 应用层：网关
     3. TCP/IP协议分为四层，分别为`应用层、传输层、网络层和网络接口层。`
     3. 协议
-        1. 网络层协议：IP、ICMP、IGMP、ARP、RARP
+        1. 物理层：RJ45、CLOCK、FDDI
+        2. 数据链路层：IEEE802.3、PPP、FR、HDLC、VLAN、MAC
+        3. 网络层协议：IP、ICMP、IGMP、ARP、RARP
             1. IP是网络层的核心，通过路由选择将下一条IP封装后交给接口层。IP数据报是无连接服务。 
-            2. ICMP是网络层的补充，可以回送报文。用来检测网络是否通畅。 
+            2. ICMP是网络层的补充，可以回送报文。用来检测网络是否通畅。 ICMP协议用于传送有关通信问题的消息，例如，数据报不能到达目标站、路由器没有足够的缓存空间或路由器向发送主机提供最短路径信息等。ICMP报文封装在IP数据报中传送，因而不保证可靠的提交。icmp是（internet control message protocol）internet控制报文协议。它是tcp/ip协议族的一个子协议，`用于在ip主机、路由器之间传递控制消息`。控制消息是指网络通不通、主机是否可达、路由是否可用等网络本身的消息。这些控制消息虽然并不传输用户数据，但是对于用户数据的传递起着重要的作用。
             3. Ping命令就是发送ICMP的echo包，通过回送的echo relay进行网络测试。 
-            4. ARP是正向地址解析协议，通过已知的IP，寻找对应主机的MAC地址。 
-            5. RARP是反向地址解析协议，通过MAC地址确定IP地址。比如无盘工作站还有DHCP服务。
-        2. 传输层协议：
+            4. ARP是正向地址解析协议，通过已知的IP，寻找对应主机的MAC地址。 利用地址转换协议(ARP)可根据IP地址查询对应的MAC地址。ARP协议就能把IP地址解析成MAC地址。`ARP将含目标IP地址域的数据报封装在广播帧中`，接收到ARP的实体，如果同本机IP相同则发回应答数据报，告之本机MAC地址，否则丢弃。每个主机通常有ARP缓冲区。 
+            5. RARP是反向地址解析协议，`通过MAC地址确定IP地址`。比如无盘工作站还有DHCP服务。反向地址转换协议(RARP)则把MAC地址转换成对应的IP地址。
+        4. 传输层协议：TCP, UDP
             1. 传输控制协议TCP(Transmission Control Protocol）：TCP是面向连接的通信协议，通过三次握手建立连接，通讯完成时要拆除连接，由于TCP是面向连接的所以只能用于点对点的通讯。TCP提供的是一种可靠的数据流服务，采用“带重传的肯定确认”技术来实现传输的可靠性。
             2. 用户数据报协议UDP(User Datagram protocol）：UDP是面向无连接的通讯协议，UDP数据包括目的端口号和源端口号信息，由于通讯不需要连接，所以可以实现广播发送。UDP通讯时不需要接收方确认，属于不可靠的传输，可能会出丢包现象，实际应用中要求程序员编程验证。UDP与TCP位于同一层，但它不管数据包的顺序、错误或重发。因此，UDP不被应用于那些使用虚电路的面向连接的服务，UDP主要用于那些面向查询---应答的服务，例如NFS。相对于FTP或Telnet，这些服务需要交换的信息量较小。使用UDP的服务包括NTP（网络时间协议）和DNS（DNS也使用TCP）。
-        3. 应用层协议。 
-            1. FTP(File Transfer Protocol）是文件传输协议，一般上传下载用FTP服务，数据端口是20H，控制端口是21H。 
+        5. 会话层：NFS、SQL、NETBIOS、RPC
+        6. 表示层：JPEG、MPEG、ASII
+        7. 应用层协议。Telnet、HTTP、FTP、WWW、NFS、SMTP
+            1. FTP(File Transfer Protocol）是文件传输协议，一般上传下载用FTP服务，数据端口是20H，控制端口是21H。 FTP协议属于TCP/IP协议族的应用层协议，利用FTP协议进行文件传送时，在客户/服务器之间一般需要建立一条控制连接(使用TCP21端口)和一条数据连接(使用TCP20端口)。
             2. Telnet服务是用户远程登录服务，使用23H端口，使用明码传送，保密性差、简单方便。 
             3. DNS(Domain Name Service）是域名解析服务，提供域名到IP地址之间的转换，使用端口53。 
             4. SMTP(Simple Mail Transfer Protocol）是简单邮件传输协议，用来控制信件的发送、中转，使用端口25。 
@@ -32,24 +36,18 @@
         1. 物理层：该层包括物理连网媒介，如电缆连线连接器。该层的协议产生并检测电压以便发送和接收携带数据的信号。具体标准有 RS232、V.35、RJ-45、FDDI。
         2. 数据链路层：它控制网络层与物理层之间的通信。它的主要功能是将从网络层接收到的数据分割成特定的可被物理层传输的帧。常见的协议有 IEEE802.3/.2、HDLC、 PPP、ATM。
         3. 网络层：其主要功能是将网络地址（例如， IP地址）翻译成对应的物理地址（例如，网卡地址），并决定如何将数据从发送方路由到接收方。在 TCP/IP协议中，网络层。具体协议有 IP、ICMP、IGMP、IPX、ARP等。
-        4. 传输层：主要负责确保数据可靠、顺序、无错地从Ａ点到传输到Ｂ点。如提供建立、维护和拆除传送连接的功能；选择网络层提供昀合适的服务；在系统之间提供可靠的透明的数据传送，提供端到端的错误恢复和流量控制。在 TCP/IP协议中，具体协议有 TCP、UDP、SPX。
-        5. 会话层：负责在网络中的两节点之间建立和维持通信，以及提供交互会话的管理功能，如三种数据流方向的控制，即一路交互、两路交替和两路同时会话模式。常见的协议有 RPC、SQL、NFS。
-        6. 表示层：`如同应用程序和网络之间的翻译官`，在表示层，数据将按照网络能理解的方案进行格式化；这种格式化也因所使用网络的类型不同而不同。表示层管理数据的解密加密、数据转换、格式化和文本压缩。常见的协议有 JPEG、ASCII、GIF、DES、 MPEG。
+        4. 传输层：`主要负责确保数据可靠、顺序、无错地从Ａ点到传输到Ｂ点`。如提供建立、维护和拆除传送连接的功能；选择网络层提供昀合适的服务；在系统之间提供可靠的透明的数据传送，提供端到端的错误恢复和流量控制。在 TCP/IP协议中，具体协议有 TCP、UDP、SPX。
+        5. 会话层：负责在网络中的两节点之间建立和维持通信，以及提供交互会话的管理功能，如三种数据流方向的控制，即一路交互、两路交替和两路同时会话模式。常见的协议有 RPC、SQL、NFS。在网络数据流中适当的位置插入同步点，`当传输出现中断时，可以从同步点的位置开始重新传输`，该网络功能的控制和管理属于会话层
+        6. 表示层：`如同应用程序和网络之间的翻译官`，在表示层，数据将按照网络能理解的方案进行格式化；这种格式化也因所使用网络的类型不同而不同。表示层管理数据的解密加密、数据转换、格式化和`文本压缩`。常见的协议有 JPEG、ASCII、GIF、DES、 MPEG。`数据压缩属于数据表示的范畴`
         7. 应用层：负责对软件提供接口以使程序能使用网络服务，如事务处理程序、文件传送协议和网络管理等。在 TCP/IP协议中，常见的协议有 HTTP、Telnet、FTP、SMTP。
     5. 常用的网络设备包括：
         1. 中继器（Repeater工作在`物理层`，用于互连相同类型的网络。中继器的作用是对电缆上传输的数据信号进行再生放大，再转发到其他电缆上，从而延长信号的传输距离，扩展局域网网段的长度。
         2. 网桥（Bridge工作在`数据链路层`，用于互连相似的网络。网桥的作用是将数据帧从一个网络段转发到另一个网络段，使得多个网络段在逻辑上看起来是一个网络。 
         3. 路由器（Router工作在`网络层`，用于互连不同类型的网络。使用路由器互联网络的最大特点是：各互连子网仍保持各自独立，每个子网可用采用不同的拓扑结构、传输介质和网络协议，网络结构层次分明。
-        4. 网关（Gateway工作在网络层以上的高层，其基本功能是实现不同网络协议的互连。这里，“不同”是指它们的物理网络和高层协议都不一样，因此，网关一般须提供不同的网络协议之间的相互转换
+        4. 网关（Gateway工作在网络层以上的高层，其基本功能是`实现不同网络协议的互连`。这里，“不同”是指它们的物理网络和高层协议都不一样，因此，网关一般须提供不同的网络协议之间的相互转换
 2. dns欺骗
     1. dns欺骗就是攻击者冒充域名服务器的一种欺骗行为。 原理：如果可以冒充域名服务器，然后把查询的ip地址设为攻击者的ip地址，这样的话，用户上网就只能看到攻击者的主页，而不是用户想要取得的网站的主页了，这就是dns欺骗的基本原理。
     2. `dns欺骗发生在tcp/ip协议中的应用层`
-3. TCP/IP协议族
-    1. 在TCP/IP协议族中，网络层主要有IP协议、ICMP协议、ARP协议和RARP协议等4个协议；
-        1. 其中，利用地址转换协议(ARP)可根据IP地址查询对应的MAC地址。
-        2. 而反向地址转换协议(RARP)则把MAC地址转换成对应的IP地址。
-        3. ICMP协议用于传送有关通信问题的消息，例如，数据报不能到达目标站、路由器没有足够的缓存空间或路由器向发送主机提供最短路径信息等。ICMP报文封装在IP数据报中传送，因而不保证可靠的提交。icmp是（internet control message protocol）internet控制报文协议。它是tcp/ip协议族的一个子协议，`用于在ip主机、路由器之间传递控制消息`。控制消息是指网络通不通、主机是否可达、路由是否可用等网络本身的消息。这些控制消息虽然并不传输用户数据，但是对于用户数据的传递起着重要的作用。
-        4. FTP协议属于TCP/IP协议族的应用层协议，利用FTP协议进行文件传送时，在客户/服务器之间一般需要建立一条控制连接(使用TCP21端口)和一条数据连接(使用TCP20端口)。
 4. 存储系统
     1. 存储系统的主要结构有三种：NAS、DAS和SAN。
         1. DAS(Direct Attached Storage，直接附加存储)，存储设备是通过电缆(通常是SCSI接口电缆)直接连接服务器。I/O请求直接发送到存储设备。DAS也可称为SAS(Server-Attached Storage，服务器附加存储)。它依赖于服务器，其本身是硬件的堆叠，不带有任何存储操作系统。
@@ -84,16 +82,16 @@
         1. RAID 1提供磁盘镜像。写到一个磁盘中的数据同时也写道另外一个盘。在网络访问第一个磁盘数据的客户，如果磁盘失效，第二个磁盘就会接管。这种冗余确保了数据的可用性，RAID 1不改进性能，跟授权没有关系，并且也不能够提供数据机密性
 6. 综合布线系统
     1. 综合布线系统是一个用于传输语音、数据、影像和其他信息的标准结构化布线系统，是建筑物或建筑群的传输网络，它使语言和数据通信设备、交换设备和其他信息管理系统彼此相连接。综合布线的热物理结构一般采用模块化设计和分层星型拓扑结构。系统结构有6个独立的子系统：
-        1. 工作区子系统：它是工作区内终端设备连接到信息插座之间的设备组成，包括信息插座、连接软线、适配器、计算机、网络集散器、电话、报警探头、摄像机、监视器、音响等。 
+        1. 工作区子系统：它是`工作区内终端设备连接到信息插座之间`的设备组成，包括信息插座、连接软线、适配器、计算机、网络集散器、电话、报警探头、摄像机、监视器、音响等。 
         2. 水平子系统：水平子系统是布置在同一楼层上，一端接在信息插座，另一端接在配线间的跳线架上，它的功能是`将干线子系统线路延伸到用户工作区`，将用户工作区引至管理子系统，并为用户提供一个符合国际标准，满足语音及高速数据传输要求的信息点出口。 
-        3. 管理子系统：`安装有线路管理器件及各种公用设备`，实现整个系统集中管理，它是干线子系统和水平子系统的桥梁，同时又可为同层组网提供条件。其中包括双绞线跳线架、跳线(有快接式跳线和简易跳线之分)。 
+        3. 管理子系统：`安装有线路管理器件及各种公用设备`，`实现整个系统集中管理`，它是`干线子系统和水平子系统的桥梁`，同时又可为同层组网提供条件。其中包括双绞线跳线架、跳线(有快接式跳线和简易跳线之分)。 
         4. 垂直干线子系统：通常它是由主设备间至各层管理间，特别是在位于中央点的公共系统设备处提供多个线路设施，采用大对数的电缆馈线或光缆，两端分别端接在设备间和管理间的跳线架上，目的是实现计算机设备、程控交换机(PBX)、控制中心与各管理子系统间的连接，是建筑物干线电缆的路由。 
         5. 设备间子系统：该子系统是由设备间中的电缆、连接跳线架及相关支撑硬件、防雷电保护装置等构成。可以说是整个配线系统的中心单元，因此它的布放、造型及环境条件的考虑适当与否，直接影响到将来信息系统的正常运行及维护和使用的灵活性。 
         6. 建筑群子系统：它是将多个建筑物的数据通信信号连接成一体的布线系统，它采用架空或地下电缆管道或直埋敷设的室外电缆和光缆互连起来，是结构化布线系统的一部分，支持提供楼群之间通信所需的硬件。
 7. 层次化网络
     1. 层次化网络设计在互联网组件的通信中引入了三个关键层的概念: 核心层( Core Layer)、汇聚层( Distribution Layer )和接入层( Access Layer)。
         1. 核心层为网络提供了`骨于组件或高速交换组件`,在纯粹的分层设计中,`核心层只完成数据交换的特殊任务`。提高网络的冗余能力、可靠性和高速的传输，提高和优化骨干网络之间的传输。
-        2. 汇聚层是核心层和终端用户接入层的分界面,`汇聚层完成了网络访问策略控制`、数据包处理、过滤、 寻址及其他数据处理的任务。 
+        2. `汇聚层`是核心层和终端用户接入层的分界面,`汇聚层完成了网络访问策略控制`、数据包处理、过滤、 寻址及其他数据处理的任务。 
         3. 接入层向本地网段提供用户接入。网络中直接面向用户连接或访问网络的部分称力接入层，将位于接入层和核心层之间的部分称为分布层或汇聚层。接入层的目的是允许终端用户连接到网络，因此，接入层交换机（或路由器，下同）具有低成本和高端口密度特性。
     2. 层次化网络中网络设备选型的基本原理
         1. 分布层/接入层交换机也称外围交换机或边缘交换机，一般都属于可堆叠，可扩充式固定端口交换机，在大中型网络中它用来构成多层次的结构灵活的用户接入网络，在中小型网络中它也可以用来构成网络骨干交换设备，应具备下列要求：
@@ -112,8 +110,9 @@
     5. 支持更多的服务类型； 
     6. 允许协议继续演变，增加新的功能，使之适应未来技术的发展；
 9. VPN
-    1. 虚拟专用网络的功能是：在公用网络上建立专用网络，进行加密通讯。在企业网络中有广泛应用。vpn网关通过对数据包的加密和数据包目标地址的转换实现远程访问。vpn有多种分类方式，主要是按协议进行分类。vpn可通过服务器、硬件、软件等多种方式实现。
+    1. 虚拟专用网络的功能是：`在公用网络上建立专用网络`，进行加密通讯。在企业网络中有广泛应用。vpn网关通过对数据包的加密和数据包目标地址的转换实现远程访问。vpn有多种分类方式，主要是按协议进行分类。vpn可通过服务器、硬件、软件等多种方式实现。
     2. `vpn技术无法实现可用性校验`
+    3. 其之所以称为虚拟网，主要是因为整个VPN网络的任意两个节点之间的连接并没有传统专网所需的端到端的物理链路，而是架构在公用网络服务商所提供的网络平台，如Internet、ATM(异步传输模式〉、Frame Relay （帧中继）等之上的逻辑网络，`用户数据在逻辑链路中传输`。
 10. FTP
     1. FTP需要在客户端与服务器之间建立两个连接：控制连接和数据连接，分别传送控制信息和文件内容
     2. 断点续传
@@ -155,7 +154,7 @@
 14. 网络交换技术 
     1. 网络交换是指通过一定的设备，如交换机等，将不同的信号或者信号形式转换为对方可识别的信号类型从而达到通信目的的一种交换形式，常见的有`数据交换、线路交换、报文交换和分组交换`。 
     2. 在计算机网络中，按照交换层次的不同，网络交换可以分为物理层交换（如电话网）、链路层交换（二层交换，对 MAC地址进行变更）、网络层交换（三层交换，对 IP地址进行变更）、传输层交换（四层交换，对端口进行变更，比较少见）和应用层交换（似乎可以理解为 Web网关等）。 
-    3. 网络中的数据交换可以分为电路交换、分组交换（数据包交换）、ATM交换、全光交换和标记交换。其中电路交换有预留，且分配一定空间，提供专用的网络资源，提供有保证的服务，应用于电话网；而分组交换无预留，且不分配空间，存在网络资源争用，提供有无保证的服务。分组交换可用于数据报网络和虚电路网络。`Internet就是数据报网络，单位是 Bit，而 ATM则用的是虚电路网络，单位是码元`。
+    3. 网络中的数据交换可以分为电路交换、分组交换（数据包交换）、ATM交换、全光交换和标记交换。其中电路交换有预留，且分配一定空间，提供专用的网络资源，提供有保证的服务，应用于电话网；而分组交换无预留，且不分配空间，存在网络资源争用，提供有无保证的服务。分组交换可用于数据报网络和虚电路网络。`Internet就是数据报网络，单位是Bit，而 ATM则用的是虚电路网络，单位是码元`。
 15. 高可用性和高可靠性的规划与设计
     1. 由于可靠性指标直接影响可用性指标，所以一般我们将这两个指标一并分析与讨论。
         1. 可用性(availability)是系统能够正常运行的时间比例。经常用两次故障之间的时间长度或在出现故障时系统能够恢复正常的速度来表示。
@@ -169,7 +168,20 @@
     1. 网络工程是一项复杂的系统工程，涉及技术问题、管理问题等，必须遵守一定的系统分析和设计方法。`网络总体设计就是根据网络规划中提出的各种技术规范和系统性能要求`，以及网络需求分析的要求，制订出一个总体计划和方案。网络设计工作包括： 
         1. 网络拓扑结构设计         网络的拓扑结构主要是指园区网络的物理拓扑结构，因为如今的局域网技术首选的是交换以太网技术。采用以太网交换机，从物理连接看拓扑结构可以是星型、扩展星型或树型等结构，从逻辑连接看拓扑结构只能是总线结构。对于大中型网络考虑链路传输的可靠性，可采用冗余结构。确立网络的物理拓扑结构是整个网络方案规划的基础，物理拓扑结构的选择往往和地理环境分布、传输介质与距离、网络传输可靠性等因素紧密相关。选择拓扑结构时，应该考虑的主要因素有：地理环境、传输介质与距离以及可靠性。 
         2. 主干网络（核心层）设计         主干网技术的选择，要根据以上需求分析中用户方网络规模大小、网上传输信息的种类和用户方可投入的资金等因素来考虑。一般而言，主干网用来连接建筑群和服务器群，可能会容纳网络上 50％～80％的信息流，是网络大动脉。连接建筑群的主干网一般以光缆做传输介质，典型的主干网技术主要有 100Mbps-FX以太网、l000Mbps以太网、 ATM等。 
-        3. 汇聚层和接入层设计        汇聚层的存在与否，取决于网络规模的大小。当建筑楼内信息点较多（比如大于 22个点）超出一台交换机的端口密度，而不得不增加交换机扩充端口时，就需要有汇聚交换机。交换机间如果采用级连方式，则将一组固定端口交换机上联到一台背板带宽和性能较好的汇聚交换机上，再由汇聚交换机上联到主干网的核心交换机。如果采用多台交换机堆叠方式扩充端口密度，其中一台交换机上联，则网络中就只有接入层。 
+        3. 汇聚层和接入层设计
+            1. `汇聚层的存在与否，取决于网络规模的大小`。
+            2. 当建筑楼内信息点较多（比如大于 22个点）超出一台交换机的端口密度，而不得不增加交换机扩充端口时，就需要有汇聚交换机。
+            3. 交换机间如果采用级连方式，则将一组固定端口交换机上联到一台背板带宽和性能较好的汇聚交换机上，再由汇聚交换机上联到主干网的核心交换机。
+            4. 如果采用多台交换机堆叠方式扩充端口密度，其中一台交换机上联，则网络中就只有接入层。 
         4. 广域网连接与远程访问设计         根据网络规模的大小、网络用户的数量，来选择对外连接通道的带宽。如果网络用户没有 WWW、E-mail等具有 Internet功能的服务器，用户可以采用 ISDN或 ADSL等技术连接外网。如果用户有 WWW、E-mail等具有 Internet功能的服务器，用户可采用 DDN（或 E1）专线连接、ATM交换及永久虚电路连接外网。如果用户与网络接入运营商在同一个城市，也可以采用光纤 10Mbps/100Mbps的速率连接 Internet。 
         5. 无线网络设计        无线网络的出现就是为了解决有线网络无法克服的困难。无线网络首先适用于很难布线的地方（比如受保护的建筑物、机场等）或者经常需要变动布线结构的地方（如展览馆等）。学校也是一个很重要的应用领域，一个无线网络系统可以使教师、学生在校园内的任何地方接入网络。另外，因为无线网络支持十几公里的区域，因此对于城市范围的网络接入也能适用，可以设想一个采用无线网络的 ISP可以为一个城市的任何角落提供高达 10Mbps的互联网接入。 
         6. 网络通信设备选型        网络通信设备选型包括核心交换机选型、汇聚层 /接入层交换机选型、远程接入与访问设备选型。
+    2. 广域网连接与远程访问设计
+        1. 根据网络规模的大小、网络用户的数量，来选择对外连接通道的带宽。
+        2. 如果网络用户没有 WWW、E-mail等具有 Internet功能的服务器，用户可以采用 ISDN或 ADSL等技术连接外网。
+        3. 如果用户有 WWW、E-mail等具有 Internet功能的服务器，用户可采用 DDN（或 E1）专线连接、ATM交换及永久虚电路连接外网。
+        4. 如果用户与网络接入运营商在同一个城市，也可以采用光纤 10Mbps/100Mbps的速率连接 Internet。
+    3. 网络规划原则 网络规划与设计服装、设计房屋不同，要构造一个最终建设完成的网络，网络规划是要给网络建设和使用者做一个心中有数的设计结果。网络规划率先考虑的有三个原则：实用性原则、开放性原则和先进性原则。 
+        1. 实用性原则。 网络建设应当作工程项目来完成，而不是当作研究或实验课题。网络应用和服务在整个网络建设中应置于非常重要的地位，这是因为只有应用才是网络建设的最终目的，网络基础设施是为最终应用服务的。因此，实用原则强调设计目标和设计结果能满足需求并且行之有效。 
+        2. 开放性原则。 网络应具有良好的开放性。这种开放性靠标准化实现，`使用符合这些标准的计算机系统很容易进行网络互联`。为此，必须制定全网统一的网络架构，并遵循统一的通信协议标准。网络架构和通信协议应选择广泛使用的国际工业标准，使得网络成为一个完全开放式的网络计算环境。开放性原则包括采用开放标准、开放技术、开放结构、开放系统组件、歼放用户接口。 
+        3. 先进性原则。 建设网络，尽可能采用成熟先进的技术，使用具有时代先进水平的计算机系统和网络设备，这些设备应该在相当长的时间内保证其先进性。开发或选购的各种网络应用软件也尽可能先进，并有相当长时间的可用性。先进性原则包括设计思想先进、软硬件设备先进、网络结构先进、开发工具先进。
