--- a/manage/02.信息系统项目管理师/06.软件工程.md
+++ b/manage/02.信息系统项目管理师/06.软件工程.md
@@ -130,8 +130,7 @@
             1. 软件质量保证是一系列活动，这些活动能够提供整个软件产品的适用性的证明。要实现软件质量保证，就需要使用为确保一致性和延长的软件周期而建立的质量控制规则。而质量保证、质量控制、审核功能以及软件测试之间的关系经常容易使人迷惑。 
             2. 为了生产出满足客户需求的产品，就必须遵循一定的过程。质量保证是一系列的支持措施，有了这些措施，这些过程的建立和改进就有了保障。在质量保证的过程中，产品质量将和可用的标准相比较，同时也要和不一致产生时的行为相比较。而`审核则是一个检查/评估的活动，用以验证与计划、原则以及过程的一致性`。
             3. 软件质量保证的主要职责是：`检查开发和管理活动是否与已定的过程策略、标准和流程一致，检查工作产品是否遵循模板规定的内容和格式`。 
-        2. 验证与确认：确定某一活动的产品是否符合活动的需求，昀终的软件产品是否达到其意图并满足用户需求。 
-        验证过程试图确保活动的输出产品已经被正确构造，即活动的输出产品满足活动的规范说明；确认过程则试图确保构造了正确的产品，即产品满足其特定的目的。 
+        2. 验证与确认：确定某一活动的产品是否符合活动的需求，最终的软件产品是否达到其意图并满足用户需求。验证过程试图确保活动的输出产品已经被正确构造，即`活动的输出产品满足活动的规范说明`；确认过程则试图确保构造了正确的产品，即产品满足其特定的目的。 
         3. 评审与审计：包括管理评审、技术评审、检查、走查、审计等。
             1. `管理评审的目的是监控进展，决定计划和进度的状态，或评价用于达到目标所用管理方法的有效性`
             2. `技术评审`的目的是`评价软件产品，以确定其对使用意图的适合性`。目标是识别规范说明与标准的差异，并向管理提供证据，以表明产品是否满足规范说明并遵从标准，而且可以控制变更。检查的目的是检测和识别软件产品异常。
@@ -168,6 +167,16 @@
 11. 软件设计
     1. 软件设计是定义一个系统或组件的`架构、组件、接口`和其他特征的过程，并得到这个过程的结果。 
     2. 软件设计包括软件架构设计和软件详细设计。`架构设计属于高层设计，主要描述软件的结构和组织，标识各种不同的组件`。
+    3. 典型架构 
+        1. 软件架构设计的一个核心问题是能否使用重复的架构模式，即能否达到架构级的软件重用。也就是说，能否在不同的软件系统中，使用同一种架构。 
+        2. 软件架构模式描述了某一特定应用领域中系统的组织方式。它反映了领域中众多系统所共有的结构和语义特性，描述了如何将各个模块和子系统有效地组织成一个完整的系统。使用一些经过实践证实的解决方案（模式）可以有效地解决更多的软件开发问题。 
+        3. 几种常见的架构模式如下。 
+            1. 常见的架构模式之管道，过滤器模式
+            2. 常见的架构模式之面向对象模式
+            3. 常见的架构模式之事件驱动模式
+            4. 常见的架构模式之分层模式
+            5. 常见的架构模式之知识库模式
+            6. 常见的架构模式之客户机／服务器模式。客户/服务器模式（Client/Server，C/S）：`基于资源不对等，为实现共享而提出的模式`。 C/S模式将应用一分为二，服务器（后台）负责数据操作和事务处理，客户（前台）完成与用户的交互任务。
 12. 结构化分析方法
     1. 结构化分析方法给出一组帮助系统分析人员产生功能规约的原理与技术。它一般利用图形表达用户需求，使用的手段主要有`数据流图、数据字典、结构化语言、判定表以及判定树`等。
 13. 软件设计、测试与维护
