--- a/manage/02.信息系统项目管理师/07.计算机网络知识.md
+++ b/manage/02.信息系统项目管理师/07.计算机网络知识.md
@@ -35,7 +35,7 @@
     4. OSI七层网络模型由下至上为1至7层，分别为
         1. 物理层：该层包括物理连网媒介，如电缆连线连接器。该层的协议产生并检测电压以便发送和接收携带数据的信号。具体标准有 RS232、V.35、RJ-45、FDDI。
         2. 数据链路层：它控制网络层与物理层之间的通信。它的主要功能是将从网络层接收到的数据分割成特定的可被物理层传输的帧。常见的协议有 IEEE802.3/.2、HDLC、 PPP、ATM。
-        3. 网络层：其主要功能是将网络地址（例如， IP地址）翻译成对应的物理地址（例如，网卡地址），并决定如何将数据从发送方路由到接收方。在 TCP/IP协议中，网络层。具体协议有 IP、ICMP、IGMP、IPX、ARP等。
+        3. 网络层：其主要功能是将`网络地址（例如， IP地址）翻译成对应的物理地址（例如，网卡地址）`，并决定如何将数据从发送方路由到接收方。在 TCP/IP协议中，网络层。具体协议有 IP、ICMP、IGMP、IPX、ARP等。
         4. 传输层：`主要负责确保数据可靠、顺序、无错地从Ａ点到传输到Ｂ点`。如提供建立、维护和拆除传送连接的功能；选择网络层提供昀合适的服务；在系统之间提供可靠的透明的数据传送，提供端到端的错误恢复和流量控制。在 TCP/IP协议中，具体协议有 TCP、UDP、SPX。
         5. 会话层：负责在网络中的两节点之间建立和维持通信，以及提供交互会话的管理功能，如三种数据流方向的控制，即一路交互、两路交替和两路同时会话模式。常见的协议有 RPC、SQL、NFS。在网络数据流中适当的位置插入同步点，`当传输出现中断时，可以从同步点的位置开始重新传输`，该网络功能的控制和管理属于会话层
         6. 表示层：`如同应用程序和网络之间的翻译官`，在表示层，数据将按照网络能理解的方案进行格式化；这种格式化也因所使用网络的类型不同而不同。表示层管理数据的解密加密、数据转换、格式化和`文本压缩`。常见的协议有 JPEG、ASCII、GIF、DES、 MPEG。`数据压缩属于数据表示的范畴`
@@ -153,7 +153,7 @@
         4. 安全审计系统 安全审计系统通过独立的、对网络行为和主机操作提供全面与忠实的记录，方便用户分析与审查事故原因，很像飞机上的黑匣子。由于数据量和分析量比较大，目前市场上鲜见特别成熟的产品，即使存在冠以审计名义的产品，也更多的是从事入侵检测的工作。
 14. 网络交换技术 
     1. 网络交换是指通过一定的设备，如交换机等，将不同的信号或者信号形式转换为对方可识别的信号类型从而达到通信目的的一种交换形式，常见的有`数据交换、线路交换、报文交换和分组交换`。 
-    2. 在计算机网络中，按照交换层次的不同，网络交换可以分为物理层交换（如电话网）、链路层交换（二层交换，对 MAC地址进行变更）、网络层交换（三层交换，对 IP地址进行变更）、传输层交换（四层交换，对端口进行变更，比较少见）和应用层交换（似乎可以理解为 Web网关等）。 
+    2. 在计算机网络中，按照交换层次的不同，网络交换可以分为物理层交换（如电话网）、`链路层交换（二层交换，对 MAC地址进行变更）`、网络层交换（三层交换，对 IP地址进行变更）、传输层交换（四层交换，对端口进行变更，比较少见）和应用层交换（似乎可以理解为 Web网关等）。 
     3. 网络中的数据交换可以分为电路交换、分组交换（数据包交换）、ATM交换、全光交换和标记交换。其中电路交换有预留，且分配一定空间，提供专用的网络资源，提供有保证的服务，应用于电话网；而分组交换无预留，且不分配空间，存在网络资源争用，提供有无保证的服务。分组交换可用于数据报网络和虚电路网络。`Internet就是数据报网络，单位是Bit，而 ATM则用的是虚电路网络，单位是码元`。
 15. 高可用性和高可靠性的规划与设计
     1. 由于可靠性指标直接影响可用性指标，所以一般我们将这两个指标一并分析与讨论。
