--- a/manage/02.信息系统项目管理师/08.信息系统服务管理.md
+++ b/manage/02.信息系统项目管理师/08.信息系统服务管理.md
@@ -64,6 +64,62 @@
         3. 服务运营：根据服务部署情况，依据ITSS，采用过程方法，全面管理基础设施、服务流程、人员和业务连续性，实现业务运营与IT服务运营融合； 
         4. 持续改进：根据服务运营的实际情况，`定期评审IT服务满足业务运营的情况，以及IT服务本身存在的缺陷，提出改进策略和方案`，并对IT服务进行重新规划设计和部署实施，以提高IT服务质量； 
         5. 监督管理：本阶段主要依据ITSS对IT服务服务质量进行评价，并列服务供方的服务过程、交付结果实施监督和绩效评估。
+    2. ITSS 核心要素。ITSS定义了IT服务由人员、过程、技术和资源组成，并对这些IT服务的组成要素进行标准化。另外，就IT服务而言，通常情况下是由具备匹配的知识、技能和经验的人员，合理运用资源，并通过规定流程向客户提供IT服务。
+        1. 人员 
+            1. 人员是指IT服务生命周期中各类满足要求的人才的总称，ITSS规定了提供IT服务的各类人员应具备的知识、经验和技能要求，目的是指导IT服务提供商根据岗位职责和管理要求“正确选人”。 
+            2. 一般而言，针对咨询设计、集成实施、运行维护和运营等典型的IT服务，所需要的人员包括项目经理（例如，系统集成项目经理、IT服务项目经理）、系统分析师、构架设计师、系统集成工程师、信息安全工程师、系统评测工程师、IT服务工程师、服务定价师、客户经理和日常IT服务人员等。 
+            3. 人员要素所面临的挑战 
+                1. 针对IT服务人员，由于尚未形成统一的职业分类以及广泛认同的知识、技能和经验要求，使得IT服务提供商面临如下挑战： 
+                2. 人员知识、技能和经验评估难； 
+                3. 不同人员交付同一IT服务的质量不一致； 
+                4. 人才流动率高，很难建设稳定的服务团队； 
+                5. 人才招聘难，很难形成合理的人力资源池。 
+            9. 人员专业化的必要性 
+                1. 有助于建立与业务发展相适应的人才队伍，保障业务连续性和稳定性； 
+                2. 有助于改进和完善人才培养模式，提高人才培养质量； 
+                3. 有助于优化人力资源管理，提高管理效率和降低管理成本。
+        2. 过程 
+            1. 过程是通过合理利用必要的资源，将输入转化为输出的一组相互关联和结构化的活动，是提高管理水平和确保服务质量的关键要素。ITSS根据咨询设计、集成实施、运行维护等各种类型的IT服务，规定了应建立的流程和各个流程应实现的关键绩效指标（KPI），`确保IT服务提供商能“正确做事”`。通过按照ITSS要求建立简洁、高效和协调的流程，能有效地将人员、技术和资源要素连接起来，指导服务人员按规定的方式方法正确地做事。 
+            过程作为IT服务的核心要素之一，主要由输入、输出、活动以及活动间的相互关系组成，有明确的目标，可重复和可度量。 
+            2. 过程要素所面临的挑战 
+                1. 过程没有明确定义，完全按照操作人员的个人习惯执行； 
+                2. 过程定义不清晰，不具备按照过程管理思路执行的价值； 
+                3. 过程定义太复杂，执行效率严重下降甚至影响业务运营； 
+                4. 没有明确的过程目标，操作人员不清楚每一项活动应该做到什么； 
+                5. 对过程没有监督，不清楚过程的稳定性； 
+                6. 对过程没有考核，不能得到持续改进。 
+            3. 过程规范化的必要性 
+                1. 确保过程可重复和可度量； 
+                2. 有效控制因未明确定义而引发的潜在风险； 
+                3. 通过对过程进行评价和度量，可持续提升过程的效率； 
+                4. 通过过程实现规范化管理，可持续提高IT服务质量； 
+                5. 通过规范化的过程管理，提高效率，减少人员和成本的投入。
+        3. 技术 
+            1. 技术是指交付满足质量要求的IT服务应使用的技术或应具备的技术能力，以及提供IT服务所必须的分析方法、架构和步骤。技术要素确保IT服务提供商能“高效做事”，是提高IT服务质量方面重点考虑的要素，主要通过自有核心技术的研发和非自有核心技术的学习借鉴，持续提升提供IT服务过程中发现问题和解决问题的能力。 
+            2. 在提供IT服务过程中，可能面临各种问题、风险以及新技术和前沿技术应用所提出的新要求，服务供方应根据需方要求或技术发展趋势，具备发现和解决问题、风险控制、技术储备以及研发、应用新技术和前沿技术的能力。针对咨询设计、集成实施、运行维护等IT服务， 
+            3. 技术要素所面临的挑战 
+                1. 为满足企业的目标和业务需求，组织对IT技术的依赖程度越来越高； 
+                2. 激烈的市场竞争，也使得组织对技术的要求越来越高； 
+                3. 低成本、高效率的服务需求，对组织的技术研发和使用能力提出了更高的要求。 
+            4. 技术体系化的必要性 
+                1. 提高IT服务质量、降低IT服务成本； 
+                2. 减少人员流失带来的损失； 
+                3. 及时应用和推广成熟技术； 
+                4. 做好新技术研发和储备； 
+                5. 在提供IT服务中使用一致的技术标准。
+        4. 资源 
+            1. 资源是指提供IT服务所依存和产生的有形及无形资产，如咨询服务供方为满足需方的需求，提供咨询服务所必须具备的知识、经验和工具等。资源要素确保IT服务提供商能“保障做事”，主要由人员、过程和技术要素中被固化的成果和能力转化而成，同时又对人员、过程和技术要素提供有力的支撑和保障。 
+            根据所提供的IT服务类型的不同，所需要的资源也不尽相同，但可以对其进行汇总。例如，咨询设计服务和运行维护服务所使用的资源包括知识库、工具库、专家库、备件库和服务台。 
+            2. 资源要素所面临的挑战 
+                1. 忽略资源的价值，投入不够，导致资源不足； 
+                2. 对资源的使用不重视，重复投资现象严重； 
+                3. 缺乏利用资源的统一规划，资源的利用率不高； 
+                4. 资源的更新不及时，与市场需求、技术研发脱节。 
+            3. 资源系统化的必要性 
+                1. 统筹资源开发利用，确保与业务运营、技术研发协调一致； 
+                2. 确保提供满足质量和成本要求的IT服务； 
+                3. 明确各类资源管理的要点，提高资源使用率； 
+                4. 结合市场和业务发展需求，确保能及时更新资源，提高资源的使用率和使用质量。
 10. 信息系统审计
     1. `管基资恢开业，馆集资会开业`。对一个信息系统审计的主要组成部分包括以下6个方面：
         1. 信息系统的管理、规划与组织：评价信息系统的管理、计划与组织方面的策略、政策、标准、程序和相关实务。
